2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/04_Opcompar.deca
// Description:
//    tests de programme correct, declaration de plusieurs avec et sans initialisation.
//      puis opération de comparaison (<,<=,>,>=,==,!=) entre les variables
//
// Resultats:
//    programme correct.
//
// Historique:
//    cree le 09/01/2024
{    
    int x=2,y=4,z =3 ;
    float a = 2.5,b =3.5 ,c;
    x<z;
    y >x;
    x<=z;
    y >=x;
    y != x;
    x == 2;
}